--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
+    "eslint": "^4.9.0",
     "express": "^4.16.2",
+    "hbs": "^4.0.1",
     "mongodb": "^2.2.33",
     "mongoose": "^4.12.4",
     "nodemon": "^1.12.1"
